--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.2.1",
     "mongoose": "^6.2.1",
     "pm2": "^5.1.2"
   }
